# VC-RNG-Tool

./: .gitignore  Cargo.toml  README.md  package.json  vc_rng_lib.d.ts  vc_rng_lib.js  vc_rng_lib_bg.js  vc_rng_lib_bg.wasm.d.ts
cli/: Cargo.toml
cli/src/: main.rs
src/: div.rs  main.rs  rng.rs
vc_rng_lib/: Cargo.toml
vc_rng_lib/src/: div.rs  lib.rs  rng.rs
