[package]
name = "vc_rng_lib"
version = "0.1.0"
authors = ["zaksabeast <19464008+zaksabeast@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.84"
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
debug = false
lto = true
codegen-units = 1
opt-level = 's'
panic = 'abort'
strip = "debuginfo"
